--- a/.github/workflows/build onecloud-24.11.yml
+++ b/.github/workflows/build onecloud-24.11.yml
@@ -10,14 +10,23 @@ jobs:
 
       
     steps:
-
+  
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          # 这个值是保留给系统的空间大小，之前设置太小，总会在安装依赖或者编译过程中报设备空间不足的错误而导致编译失败
+          root-reserve-mb: 8096
+          swap-size-mb: 2266
+          remove-dotnet: 'true'
+          remove-android: 'true'
 
       - name: Install key 
         run: |
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E
-     - name: Install gcc-arm
-       run: |
-         sudo apt-get install gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf
+
+      - name: Install key 
+        run: |
+          sudo apt-get install gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf
           
       - name: Checkout armbian/build
         run: |
@@ -27,27 +36,22 @@ jobs:
         run: |
           cd Build-Armbian-OneCloud
           # Don't update remote cache
-          ./compile.sh build BOARD=onecloud BRANCH=legacy BUILD_DESKTOP=no BUILD_MINIMAL=yes COMPRESS_OUTPUTIMAGE=img EXTRAWIFI=yes  KERNEL_CONFIGURE=no  DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna RELEASE=jammy BOOTSIZE=64  SYNC_CLOCK=no INCLUDE_HOME_DIR=yes
+          sudo ./compile.sh BOARD=onecloud BRANCH=edge RELEASE=bookworm BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
           sudo chown $(id -u):$(id -g) -R output/
-
       - name: Install Dependents
         run: |
           sudo apt install img2simg
-
           ver="v0.3.1"
           curl -L -o ./AmlImg https://github.com/hzyitc/AmlImg/releases/download/v0.3.1/AmlImg_v0.3.1_linux_amd64
           chmod +x ./AmlImg
-
       - name: Download and unpack the latest u-boot
         run: |
           echo "::group::Download"
           curl -L -o ./uboot.img https://github.com/hzyitc/u-boot-onecloud/releases/download/build-20221028-0940/eMMC.burn.img
           echo "::endgroup::"
-
           echo "::group::Unpack"
           ./AmlImg unpack ./uboot.img burn/
           echo "::endgroup::"
-
       - name: Extract boot and rootfs partitions
         run: |
           diskimg=$(ls Build-Armbian-OneCloud/output/images/*.img)
@@ -56,36 +60,30 @@ jobs:
           sudo img2simg ${loop}p2 burn/rootfs.simg
           sudo losetup -d $loop
           sudo chown $(id -u):$(id -g) -R burn/
-
       - name: Generate burn image
         run: |
           echo -n "sha1sum $(sha1sum burn/boot.simg | awk '{print $1}')" >burn/boot.VERIFY
           echo -n "sha1sum $(sha1sum burn/rootfs.simg | awk '{print $1}')" >burn/rootfs.VERIFY
-
           cat <<EOF >>burn/commands.txt
           PARTITION:boot:sparse:boot.simg
           VERIFY:boot:normal:boot.VERIFY
           PARTITION:rootfs:sparse:rootfs.simg
           VERIFY:rootfs:normal:rootfs.VERIFY
           EOF
-
           prefix=$(ls Build-Armbian-OneCloud/output/images/*.img | sed 's/\.img$//')
           burnimg=${prefix}.burn.img
           ./AmlImg pack $burnimg burn/
-
       - name: Hash and compress images
         run: |
           for f in Build-Armbian-OneCloud/output/images/*.img; do
             sha256sum "$f" | tee -a sha256sum
             xz --threads=0 --compress "$f"
           done
-
       - name: Generate release informations
         run: |
           cat <<EOF | sed -E 's/^  //' | tee Release.md
             $(cat sha256sum | awk '{printf "%s: `%s`\n", $2, $1}')
           EOF
-
       - name: Upload to release
         uses: softprops/action-gh-release@v2
         with:
