--- a/.github/workflows/build s805.yml
+++ b/.github/workflows/build s805.yml
@@ -187,13 +187,7 @@ jobs:
           # Don't update remote cache
           export GITHUB_ACTIONS=false
           sudo --preserve-env \
-            ./compile.sh \
-             BOARD=onecloud \
-             BRANCH=current \
-             RELEASE=bookworm \
-             BUILD_MINIMAL=yes \
-             BUILD_DESKTOP=no \
-             KERNEL_CONFIGURE=no
+            ./compile.sh BOARD=onecloud BRANCH=legacy RELEASE=bookworm BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
               COMPRESS_OUTPUTIMAGE=img
           sudo chown $(id -u):$(id -g) -R output/
 
