--- a/.github/workflows/build onecloud-24.11.yml
+++ b/.github/workflows/build onecloud-24.11.yml
@@ -1,4 +1,4 @@
-*name: build onecloud-24.11
+name: build onecloud-24.11
 
 on:
   repository_dispatch:
@@ -14,7 +14,6 @@ jobs:
       - name: Install key 
         run: |
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E
-
           
       - name: Checkout armbian/build
         run: |
