--- a/.github/workflows/build onecloud-24.11.yml
+++ b/.github/workflows/build onecloud-24.11.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           cd Build-Armbian-OneCloud
           # Don't update remote cache
-          ./compile.sh BOARD=onecloud BRANCH=edge RELEASE=bookworm BUILD_MINIMAL=no BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
+          ./compile.sh BOARD=onecloud BRANCH=current RELEASE=bookworm BUILD_MINIMAL=no BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
           sudo chown $(id -u):$(id -g) -R output/
       - name: Install Dependents
         run: |
