--- a/.github/workflows/build onecloud-24.03.yml
+++ b/.github/workflows/build onecloud-24.03.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
 
+    steps:
       - name: Install key 
         run: |
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E
