--- a/.github/workflows/build onecloud.yml
+++ b/.github/workflows/build onecloud.yml
@@ -20,10 +20,11 @@ jobs:
            git clone --depth=1 --branch=main https://github.com/mofeng-git/build
       - name: gcc-arm
         run: |
-           sudo mkdir /build/toolchain/
+           cd build
+           sudo mkdir /toolchain/
            wget https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-a/9.2-2019.12/binrel/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
-           sudo cp gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz /build/toolchain/ -f
-           sudo tar -vxf /build/toolchain/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
+           sudo cp gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz /toolchain/ -f
+           sudo tar -vxf /toolchain/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
 
            
       - name: Build
