--- a/.github/workflows/build onecloud.yml
+++ b/.github/workflows/build onecloud.yml
@@ -21,8 +21,8 @@ jobs:
       - name: gcc-arm
         run: |
            cd build
-           sudo mkdir toolchain
-           cd toolchain
+           sudo mkdir /toolchain
+           cd /toolchain
            wget https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-a/9.2-2019.12/binrel/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
         
            sudo tar -vxf gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
