--- a/.github/workflows/build onecloud.yml
+++ b/.github/workflows/build onecloud.yml
@@ -15,11 +15,14 @@ jobs:
         run: |
            git clone --depth=1 --branch=main https://github.com/mofeng-git/build
            
-      - name: Build
+      - name: gcc-arm
         run: |
           cd build/tools
           wget https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-a/9.2-2019.12/binrel/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
+          sudo chmod 777 /build/tools/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
           sudo tar -vxf gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
+          sudo chmod -R 777 /build/tools/
+          
       - name: Build
         run: |
           cd build
