--- a/.github/workflows/build onecloud.yml
+++ b/.github/workflows/build onecloud.yml
@@ -21,7 +21,7 @@ jobs:
           wget https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-a/9.2-2019.12/binrel/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
           sudo chmod 777 gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
           sudo tar -vxf gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf.tar.xz
-          sudo chmod -R 777 /home/runner/work/armbian-build/armbian-build/build/tools/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf
+          sudo chmod 777 /home/runner/work/armbian-build/armbian-build/build/tools/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf
           sudo chmod 777 /build/tools/gcc-arm-9.2-2019.12-x86_64-arm-none-linux-gnueabihf/bin/arm-none-linux-gnueabihf-gcc
       - name: Build
         run: |
