--- a/.github/workflows/build onecloud.yml
+++ b/.github/workflows/build onecloud.yml
@@ -13,7 +13,7 @@ jobs:
             
       - name: Checkout armbian/build
         run: |
-           git clone --depth=1 --branch=main https://github.com/mofeng-git/build
+           git clone --depth=1 --branch=main https://github.com/hy5528/build
   
       - name: Build
         run: |
