--- a/.github/workflows/build onecloud-24.03.yml
+++ b/.github/workflows/build onecloud-24.03.yml
@@ -15,13 +15,13 @@ jobs:
       
       - name: Checkout armbian/build
         run: |
-          git clone --depth=1 --branch=main https://github.com/hy5528/Build-Armbian
+          git clone --depth=1 --branch=s8xx https://github.com/SLAzurin/build-armbian-custom
       
       - name: Build
         run: |
-          cd Build-Armbian
+          cd build-armbian-custom
           # Don't update remote cache
-          sudo ./compile.sh BOARD=onecloud BRANCH=current RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
+          ./compile.sh BOARD=aml-s812 BRANCH=current RELEASE=bullseye BUILD_MINIMAL=no BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img USE_TORRENT=no
           sudo chown $(id -u):$(id -g) -R output/
       - name: Install Dependents
         run: |
