--- a/.github/workflows/build onecloud-23.09.yml
+++ b/.github/workflows/build onecloud-23.09.yml
@@ -17,13 +17,13 @@ jobs:
           
       - name: Checkout armbian/build
         run: |
-           git clone --depth=1 --branch=main https://github.com/hy5528/armbian-riscv-build
+           git clone --depth=1 --branch=main https://github.com/hy5528/armbian-s805-build
       
       - name: Build
         run: |
-          cd armbian-riscv-build
+          cd armbian-s805-build
           # Don't update remote cache
-          sudo ./compile.sh BOARD=onecloud BRANCH=current RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
+          sudo ./compile.sh BOARD=onecloud BRANCH=edge RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
           sudo chown $(id -u):$(id -g) -R output/
       - name: Install Dependents
         run: |
@@ -41,7 +41,7 @@ jobs:
           echo "::endgroup::"
       - name: Extract boot and rootfs partitions
         run: |
-          diskimg=$(ls armbian-riscv-build/output/images/*.img)
+          diskimg=$(ls armbian-s805-build/output/images/*.img)
           loop=$(sudo losetup --find --show --partscan $diskimg)
           sudo img2simg ${loop}p1 burn/boot.simg
           sudo img2simg ${loop}p2 burn/rootfs.simg
@@ -57,12 +57,12 @@ jobs:
           PARTITION:rootfs:sparse:rootfs.simg
           VERIFY:rootfs:normal:rootfs.VERIFY
           EOF
-          prefix=$(ls armbian-riscv-build/output/images/*.img | sed 's/\.img$//')
+          prefix=$(ls armbian-s805-build/output/images/*.img | sed 's/\.img$//')
           burnimg=${prefix}.burn.img
           ./AmlImg pack $burnimg burn/
       - name: Hash and compress images
         run: |
-          for f in armbian-riscv-build/output/images/*.img; do
+          for f in armbian-s805-build/output/images/*.img; do
             sha256sum "$f" | tee -a sha256sum
             xz --threads=0 --compress "$f"
           done
@@ -78,4 +78,4 @@ jobs:
           append_body: true
           body_path: Release.md
           files: |
-            armbian-riscv-build/output/images/*
+            armbian-s805-build/output/images/*
