--- a/.github/workflows/build onecloud-23.09.yml
+++ b/.github/workflows/build onecloud-23.09.yml
@@ -13,11 +13,11 @@ jobs:
           
       - name: Checkout armbian/build
         run: |
-           git clone --depth=1 --branch=main https://github.com/hy5528/armbian-s805-build
+           git clone --depth=1 --branch=main https://github.com/hy5528/Build-Armbian-OneCloud
       
       - name: Build
         run: |
-          cd armbian-s805-build
+          cd Build-Armbian-OneCloud
           # Don't update remote cache
           ./compile.sh build BOARD=onecloud BRANCH=legacy BUILD_DESKTOP=no BUILD_MINIMAL=yes COMPRESS_OUTPUTIMAGE=img EXTRAWIFI=yes  KERNEL_CONFIGURE=no  DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna RELEASE=jammy BOOTSIZE=64  SYNC_CLOCK=no INCLUDE_HOME_DIR=yes 
           sudo chown $(id -u):$(id -g) -R output/
