--- a/.github/workflows/build onecloud-23.09.yml
+++ b/.github/workflows/build onecloud-23.09.yml
@@ -10,7 +10,9 @@ jobs:
 
       
     steps:
-          
+      - name: Install key 
+        run: |
+          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E  
       - name: Checkout armbian/build
         run: |
            git clone --depth=1 --branch=main https://github.com/hy5528/Build-Armbian-OneCloud
