--- a/.github/workflows/build onecloud-24.11.yml
+++ b/.github/workflows/build onecloud-24.11.yml
@@ -1,4 +1,4 @@
-name: build onecloud-main
+name: build onecloud-24.11
 
 on:
   repository_dispatch:
@@ -74,7 +74,7 @@ jobs:
       - name: Upload to release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: Armbian_Onecloud_jammy_5.9.0-docker
+          tag_name: Armbian_Onecloud_jammy_5.9.0
           append_body: true
           body_path: Release.md
           files: |
