--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -15,11 +15,11 @@ jobs:
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E  
       - name: Checkout armbian/build
         run: |
-           git clone --depth=1 --branch=main https://github.com/hy5528/Build-Armbian-OneCloud
+           git clone --depth=1 --branch=main https://github.com/hy5528/build
       
       - name: Build
         run: |
-          cd Build-Armbian-OneCloud
+          cd build
           # Don't update remote cache
           sudo ./compile.sh BOARD=onecloud BRANCH=current RELEASE=bookworm BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
           sudo chown $(id -u):$(id -g) -R output/
@@ -39,7 +39,7 @@ jobs:
           echo "::endgroup::"
       - name: Extract boot and rootfs partitions
         run: |
-          diskimg=$(ls armbian-s805-build/output/images/*.img)
+          diskimg=$(ls build/output/images/*.img)
           loop=$(sudo losetup --find --show --partscan $diskimg)
           sudo img2simg ${loop}p1 burn/boot.simg
           sudo img2simg ${loop}p2 burn/rootfs.simg
@@ -55,12 +55,12 @@ jobs:
           PARTITION:rootfs:sparse:rootfs.simg
           VERIFY:rootfs:normal:rootfs.VERIFY
           EOF
-          prefix=$(ls armbian-s805-build/output/images/*.img | sed 's/\.img$//')
+          prefix=$(ls build/output/images/*.img | sed 's/\.img$//')
           burnimg=${prefix}.burn.img
           ./AmlImg pack $burnimg burn/
       - name: Hash and compress images
         run: |
-          for f in armbian-s805-build/output/images/*.img; do
+          for f in build/output/images/*.img; do
             sha256sum "$f" | tee -a sha256sum
             xz --threads=0 --compress "$f"
           done
@@ -76,4 +76,4 @@ jobs:
           append_body: true
           body_path: Release.md
           files: |
-            armbian-s805-build/output/images/*
+            build/output/images/*
