--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -16,7 +16,11 @@ jobs:
       - name: Checkout armbian/build
         run: |
            git clone --depth=1 --branch=main https://github.com/hy5528/build
-      
+      - name: "Copy userpatches to build folder"
+        shell: bash
+        run: |
+          rsync -av current/userpatches/. build/userpatches/
+          
       - name: Build
         run: |
           cd build
