--- a/.github/workflows/build onecloud-22.11.yml
+++ b/.github/workflows/build onecloud-22.11.yml
@@ -18,6 +18,14 @@ jobs:
       - name: Checkout armbian/build
         run: |
            git clone --depth=1 --branch=master https://github.com/hy5528/s805-armbian-build
+
+      - name: "Checkout current repository"
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          clean: false
+          path: current
+          
       - name: "Copy userpatches to build folder"
         shell: bash
         run: |
