--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,91 +1,81 @@
-name: 'Armbian/build'
-description: 'Armbian Linux build framework'
-inputs:
-  board:
-    required: true
-  distro:
-    required: true
-  suite:
-    required: false
-  flavor:
-    required: true
-  kernel_branch:
-    required: false
-    default: 'current'
-  artifacts:
-    required: false
-    default: 'false'
-  release-id:
-    required: false
-  github-token:
-    required: false
-runs:
-  using: "composite"
-  steps:
-    - name: Get more space
-      uses: easimon/maximize-build-space@master
-      with:
-        root-reserve-mb: 30720
-        swap-size-mb: 1024
-        remove-dotnet: true
-        remove-android: true
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        repository: armbian/build
-        path: build
-    - name: Set env
-      shell: bash
-      run: |
-        case ${{ inputs.distro }} in
-          debian)
-            echo "release=bullseye" >> $GITHUB_ENV
-            ;;
-          ubuntu)
-            echo "release=jammy" >> $GITHUB_ENV
-            ;;
-          *)
-            echo "Unknown distro!" >&2
-            exit 1
-            ;;
-        esac
-        if [ ${{ inputs.flavor }} == "cli" ]
-        then
-          echo "build-minimal=yes" >> $GITHUB_ENV
-          echo "build-desktop=no" >> $GITHUB_ENV
-          echo "desktop-environment=" >> $GITHUB_ENV
-          echo "desktop-environment-config-name=" >> $GITHUB_ENV
-        else
-          echo "build-minimal=no" >> $GITHUB_ENV
-          echo "build-desktop=yes" >> $GITHUB_ENV
-          case ${{ inputs.flavor }} in
-            kde)
-              echo "desktop-environment=kde-plasma" >> $GITHUB_ENV
-              ;;
-            *)
-              echo "desktop-environment=${{ inputs.flavor }}" >> $GITHUB_ENV
-              ;;
-          esac
-          echo "desktop-environment-config-name=config_base" >> $GITHUB_ENV
-        fi
-    - name: Build
-      shell: bash
-      run: |
-        cd ./build
-        ./compile.sh \
-        PREFER_DOCKER=yes \
-        BOARD=${{ inputs.board }} \
-        BRANCH=${{ inputs.kernel_branch }} \
-        RELEASE=${{ env.release }} \
-        BUILD_MINIMAL=${{ env.build-minimal }} \
-        BUILD_DESKTOP=${{ env.build-desktop }} \
-        KERNEL_ONLY=no \
-        KERNEL_CONFIGURE=no \
-        DESKTOP_ENVIRONMENT=${{ env.desktop-environment }} \
-        DESKTOP_ENVIRONMENT_CONFIG_NAME=${{ env.desktop-environment-config-name }} \
-        DESKTOP_APPGROUPS_SELECTED=none \
-        EXPERT=yes \
-        COMPRESS_OUTPUTIMAGE=sha,gpg,xz
+name: build onecloud-main
+
+on:
+  repository_dispatch:
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-20.04
+
+      
+    steps:
+      - name: Install key 
+        run: |
+          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E  
+      - name: Checkout armbian/build
+        run: |
+           git clone --depth=1 --branch=main https://github.com/hy5528/build
+           
+      - name: "Checkout current repository"
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          clean: false
+          path: current
+          
+      - name: "Copy userpatches to build folder"
+        shell: bash
+        run: |
+          rsync -av current/userpatches/. build/userpatches/
+          
+      - name: Build
+        run: |
+          cd build
+          # Don't update remote cache
+          sudo ./compile.sh BOARD=onecloud BRANCH=current RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
+          sudo chown $(id -u):$(id -g) -R output/
+      - name: Install Dependents
+        run: |
+          sudo apt install img2simg
+          ver="v0.3.1"
+          curl -L -o ./AmlImg https://github.com/hzyitc/AmlImg/releases/download/v0.3.1/AmlImg_v0.3.1_linux_amd64
+          chmod +x ./AmlImg
+      - name: Download and unpack the latest u-boot
+        run: |
+          echo "::group::Download"
+          curl -L -o ./uboot.img https://github.com/hzyitc/u-boot-onecloud/releases/download/build-20221028-0940/eMMC.burn.img
+          echo "::endgroup::"
+          echo "::group::Unpack"
+          ./AmlImg unpack ./uboot.img burn/
+          echo "::endgroup::"
+      - name: Extract boot and rootfs partitions
+        run: |
+          diskimg=$(ls build/output/images/*.img)
+          loop=$(sudo losetup --find --show --partscan $diskimg)
+          sudo img2simg ${loop}p1 burn/boot.simg
+          sudo img2simg ${loop}p2 burn/rootfs.simg
+          sudo losetup -d $loop
+          sudo chown $(id -u):$(id -g) -R burn/
+      - name: Generate burn image
+        run: |
+          echo -n "sha1sum $(sha1sum burn/boot.simg | awk '{print $1}')" >burn/boot.VERIFY
+          echo -n "sha1sum $(sha1sum burn/rootfs.simg | awk '{print $1}')" >burn/rootfs.VERIFY
+          cat <<EOF >>burn/commands.txt
+          PARTITION:boot:sparse:boot.simg
+          VERIFY:boot:normal:boot.VERIFY
+          PARTITION:rootfs:sparse:rootfs.simg
+          VERIFY:rootfs:normal:rootfs.VERIFY
+          EOF
+          prefix=$(ls build/output/images/*.img | sed 's/\.img$//')
+          burnimg=${prefix}.burn.img
+          ./AmlImg pack $burnimg burn/
+      - name: Hash and compress images
+        run: |
+          for f in build/output/images/*.img; do
+            sha256sum "$f" | tee -a sha256sum
+            xz --threads=0 --compress "$f"
+          done
     - name: Upload artifacts
       if: inputs.artifacts == 'true'
       uses: actions/upload-artifact@v3
