--- a/.github/workflows/build onecloud-22.05.yml
+++ b/.github/workflows/build onecloud-22.05.yml
@@ -36,7 +36,7 @@ jobs:
           cd onecloud-armbian-build
           # Don't update remote cache
           sudo ./compile.sh BOARD=onecloud BRANCH=edge RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
-          sudo chown $(id -u):$(id -g) -R output/
+          sudo chown $(id -u):$(id -g) -R image*/
 
       - name: Install Dependents
         run: |
@@ -58,7 +58,7 @@ jobs:
 
       - name: Extract boot and rootfs partitions
         run: |
-          diskimg=$(ls onecloud-armbian-build/output/images/*.img)
+          diskimg=$(ls onecloud-armbian-build/.tmp/image*/*.img)
           loop=$(sudo losetup --find --show --partscan $diskimg)
           sudo img2simg ${loop}p1 burn/boot.simg
           sudo img2simg ${loop}p2 burn/rootfs.simg
@@ -77,13 +77,13 @@ jobs:
           VERIFY:rootfs:normal:rootfs.VERIFY
           EOF
 
-          prefix=$(ls onecloud-armbian-build/output/images/*.img | sed 's/\.img$//')
+          prefix=$(ls onecloud-armbian-build/.tmp/image*/*.img | sed 's/\.img$//')
           burnimg=${prefix}.burn.img
           ./AmlImg pack $burnimg burn/
 
       - name: Hash and compress images
         run: |
-          for f in onecloud-armbian-build/output/images/*.img; do
+          for f in onecloud-armbian-build/.tmp/image*/*.img; do
             sha256sum "$f" | tee -a sha256sum
             xz --threads=0 --compress "$f"
           done
@@ -101,4 +101,4 @@ jobs:
           append_body: true
           body_path: Release.md
           files: |
-            onecloud-armbian-build/output/images/*
+            onecloud-armbian-build/.tmp/image*/*
