--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,7 +14,7 @@ env:
   UBOOT_REPO: hzyitc/u-boot-onecloud
   UBOOT_RELEASE: latest
   UBOOT_BURNIMG: eMMC.burn.img
-  ARMBIAN_REPO: hy5528/onecloud-armbian-build
+  ARMBIAN_REPO: hy5528/build
   ARMBIAN_REF: master
   # PATCHES: 4077,5076,5082
 
