--- a/.github/workflows/build onecloud-22.05.yml
+++ b/.github/workflows/build onecloud-22.05.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Extract boot and rootfs partitions
         run: |
-          diskimg=$(ls onecloud-armbian-build/.tmp/image-$-$-$-$-$/*.img)
+          diskimg=$(ls onecloud-armbian-build/.tmp/image-$/*.img)
           loop=$(sudo losetup --find --show --partscan $diskimg)
           sudo img2simg ${loop}p1 burn/boot.simg
           sudo img2simg ${loop}p2 burn/rootfs.simg
@@ -85,13 +85,13 @@ jobs:
           VERIFY:rootfs:normal:rootfs.VERIFY
           EOF
 
-          prefix=$(ls onecloud-armbian-build/.tmp/image-$-$-$-$-$/*.img | sed 's/\.img$//')
+          prefix=$(ls onecloud-armbian-build/.tmp/image-$/*.img | sed 's/\.img$//')
           burnimg=${prefix}.burn.img
           ./AmlImg pack $burnimg burn/
 
       - name: Hash and compress images
         run: |
-          for f in onecloud-armbian-build/.tmp/image-$-$-$-$-$/*.img; do
+          for f in onecloud-armbian-build/.tmp/image-$/*.img; do
             sha256sum "$f" | tee -a sha256sum
             xz --threads=0 --compress "$f"
           done
@@ -109,4 +109,4 @@ jobs:
           append_body: true
           body_path: Release.md
           files: |
-            onecloud-armbian-build/.tmp/image-$-$-$-$-$/*
+            onecloud-armbian-build/.tmp/image-$/*
