--- a/.github/workflows/build onecloud-22.11.yml
+++ b/.github/workflows/build onecloud-22.11.yml
@@ -36,7 +36,8 @@ jobs:
       - name: "Copy userpatches to build folder"
         shell: bash
         run: |
-          rsync -av current/userpatches/. s805-armbian-build/userpatches/
+          sudo rm -r /s805-armbian-build/lib
+          rsync -av current/patch/. s805-armbian-build/
           
       - name: Build
         run: |
