--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -15,7 +15,7 @@ jobs:
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E  
       - name: Checkout armbian/build
         run: |
-           git clone --depth=1 --branch=main https://github.com/hy5528/build
+           git clone --depth=1 --branch=main https://github.com/armbian/build
            
       - name: "Checkout current repository"
         uses: actions/checkout@v4
